Revision history for Role-Tiny

1.003002 - 2013-09-04
  - abbreviate generated package names if they are longer than perl can handle
    (RT#83248)
  - add explicit dependency on the version of Exporter that added 'import'

1.003001 - 2013-07-14
  - fix test accidentally requiring Class::Method::Modifiers

1.003000 - 2013-07-14
  - allow composing roles simultaneously that mutually require each other
    (RT#82711)
  - Fix _concrete_methods_of returning non-CODE entries
  - fix broken implementation of method conflict resolution
    (Perlmonks#1041015)
  - add is_role method for checking if a given package is a role
  - drop minimum perl version - code tests just fine on 5.6.1 and 5.6.2

1.002005 - 2013-02-01
  - complain loudly if Class::Method::Modifiers is too old (and skip tests)
  - don't use $_ as loop variable when calling arbitrary code

1.002004 - 2012-11-02
  - remove accidentally-introduced strictures.pm usage

1.002003 - 2012-10-29
  - fix method modifier breakage on 5.10.0

1.002002 - 2012-10-28
  - skip t/around-does.t when Class::Method::Modifiers is not installed
    (RT#80310)

1.002001 - 2012-10-26
  - t/does-Moo.t moved to 'xt' (RT#80290)
  - don't die when looking for 'DOES' on perl < 5.10 (RT#80402)

1.002000 - 2012-10-19
  - load class in addition to roles when using create_class_from_roles
  - fix module name in Makefile.PL (RT#78591)
  - when classes consume roles, override their DOES method (RT#79747)
  - method modifiers can be used for 'does' and 'DOES'

1.001005 - 2012-07-18
  - localize UNIVERSAL::can change to avoid confusing TB2
  - properly report roles consumed by superclasses

1.001004 - 2012-07-12
  - remove strictures.pm from the test supplied by mmcleric so we install again
  - when applying runtime roles include roles from original class in new class
    ( fixes ::does_role checks)

1.001003 - 2012-06-19
  - correctly apply modifiers with role composition