@@ -1,5 +1,7 @@
 Revision history for Role-Tiny
 
+  - allow superclass to provide conflicting methods (RT#91054)
+
 1.003002 - 2013-09-04
   - abbreviate generated package names if they are longer than perl can handle
     (RT#83248)
